<resources>
    <string name="app_name">ProyectoPSP7</string>
    <string name="title_activity_time_log">TimeLog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_defect_log">DefectLog</string>
    <string name="title_activity_project_plan_summary">ProjectPlanSummary</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="phase">Phase</string>
    <string name="start">Start</string>
    <string name="interupcion">Interrupcion</string>
    <string name="stop">Stop</string>
    <string name="delta">Delta</string>
    <string name="comments">Comments</string>

    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="fixtime">Fix Time</string>
    <string name="phaseinject">Phase Injected</string>
    <string name="phaseremove">Phase Removed</string>

    <string name="ingreseproyecto">Ingrese el nombre del proyecto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

