<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.DefectLog">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="204dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="281dp"
            android:layout_height="36dp"
            android:layout_gravity="center">

        </Spinner>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/fixtime"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txtFixTime"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAgain"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/phaseinject"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerPhaseInject"
            android:layout_width="286dp"
            android:layout_height="35dp"
            android:layout_gravity="center">

        </Spinner>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/phaseremove"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerPhaseRemoved"
            android:layout_width="286dp"
            android:layout_height="35dp"
            android:layout_gravity="center">

        </Spinner>

    </LinearLayout>

    <TextView
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/comments"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.806" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/txtComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp" />


    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>