<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/aa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.TimeLog">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/phase"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerPhase"
            android:layout_width="172dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp">

        </Spinner>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txtHorainicio"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:enabled="false"
            android:hint="Hora de Inicio" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="43dp"
            android:layout_height="40dp"
            android:background="@drawable/hora" />


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="293dp"
        android:layout_height="128dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.031">

        <android.support.constraint.ConstraintLayout
            android:layout_width="318dp"
            android:layout_height="195dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/comments"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="297dp"
                android:layout_height="0dp"
                android:layout_marginBottom="104dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">


                <EditText
                    android:id="@+id/txtComments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp" />


            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/interupcion"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txtInterrupcion"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:hint="Ingrese tiempo en minutos"
            android:inputType="number"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/delta"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txtDelta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:enabled="false"
            android:textSize="15sp"
            android:hint="Tiempo Total de Phase" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/stop"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txtHoraFin"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:enabled="false"
            android:textSize="15sp"
            android:hint="Hora Fin" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="43dp"
            android:layout_height="40dp"
            android:background="@drawable/hora" />


    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>